# tcl-ls

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  STATUS.md  pyproject.toml  release-please-config.json  tcl-ls.spec
.github/workflows/: ci.yml  pages.yml  release-assets.yml  release-please.yml  release.yml  releases.yml
docs/: conf.py  development.rst  getting-started.rst  index.rst  meta.rst  support.rst
docs/_static/: custom.css
docs/reference/: cli.rst  diagnostics.rst  index.rst  lsp-features.rst  meta-syntax.rst
docs/user-guide/: checker.rst  configuration.rst  index.rst  language-server.rst  neovim.md  vscode.md
editors/nvim/: README.md
editors/nvim/lsp/: tcl-ls.lua
editors/vscode/: .vscodeignore  Makefile  README.md  package-lock.json  package.json
editors/vscode/scripts/: stage_vscode_server.py
editors/vscode/src/: command-line.js  extension.js
editors/vscode/test/: command-line.test.js
meta/: meta.meta.tcl  meta.tcl
meta/plugins/: host.tm
meta/tcl8.6/: msgcat.tcl  tcl.meta.tcl  tcl.tcl  tcloo.meta.tcl  tcloo.tcl  tcltest.tcl  tk.meta.tcl  tk.tcl
meta/tcllib/: asn.meta.tcl  asn.tcl  clay.meta.tcl  clay.tcl  cmdline.meta.tcl  cmdline.tcl  fileutil.tcl  helper_command_effects.tcl  json.meta.tcl  json_write.tcl  log.meta.tcl  log.tcl  logger.meta.tcl  logger.tcl  struct_set.tcl  tepam.meta.tcl  tepam.tcl  tepam.tm  testutilities.meta.tcl  testutilities.tcl
meta/tcllib/doctools/: text.tcl
meta/tcllib/json/: write.meta.tcl
meta/tcllib/oo/: meta.meta.tcl
meta/tcllib/struct/: set.meta.tcl
meta/tcllib/textutil/: adjust.meta.tcl  adjust.tcl  repeat.tcl  split.meta.tcl  split.tcl  string.meta.tcl  string.tcl  tabify.meta.tcl  tabify.tcl  textutil.meta.tcl  textutil.tcl  trim.tcl  wcswidth.tcl
scripts/: generate_builtin_commands.py  package_release_asset.py  platform_target.py  publish_release.py  release_version.py  smoke_pyinstaller_lsp.py
skills/commit-messages/: SKILL.md
skills/commit-messages/scripts/: check_commit_message.py
src/tcl_lsp/: __init__.py  __main__.py  cache.py  check.py  common.py  meta_tools.py  metadata_paths.py  project_config.py  workspace.py
src/tcl_lsp/analysis/: __init__.py  arity.py  builtins.py  control_flow.py  embedded_languages.py  facts.py  index.py  metadata_commands.py  metadata_effects.py  model.py  resolver.py  signature_matching.py  tcl_plugins.py
src/tcl_lsp/analysis/diagnostics/: __init__.py  ambiguous_command.py  ambiguous_variable.py  base.py  duplicate_proc.py  helpers.py  invalid_arguments.py  invalid_regex.py  missing_option_value.py  unknown_option.py  unknown_subcommand.py  unreachable_code.py  unresolved_command.py  unresolved_package.py  unresolved_variable.py  wrong_argument_count.py
src/tcl_lsp/analysis/facts/: __init__.py  collector.py  lowering.py  parsing.py  utils.py
src/tcl_lsp/checker/: __init__.py  cli.py  model.py  reporting.py  service.py
src/tcl_lsp/data/: __init__.py  clay_builtin_commands.tcl  doctools_text_builtin_commands.tcl  fileutil_builtin_commands.tcl  msgcat_builtin_commands.tcl  oometa_builtin_commands.tcl  tcl_builtin_commands.tcl  tcloo_builtin_commands.tcl  tcltest_builtin_commands.tcl  tk_builtin_commands.tcl
src/tcl_lsp/lsp/: __init__.py  conversion.py  document_changes.py  model.py  semantic_tokens.py  server.py  service.py  state.py  workspace_rebuild.py
src/tcl_lsp/meta/: __init__.py
src/tcl_lsp/parser/: __init__.py  expr.py  helpers.py  model.py  parser.py
src/tcl_lsp/plugins/: host.py
src/tcl_lsp/project/: __init__.py  config.py  indexing.py  paths.py
src/tcl_lsp/tools/: tcl_meta.tcl
tests/: conftest.py  lsp_service.py  lsp_support.py  project_support.py  test_check.py  test_generate_builtin_commands.py  test_main.py  test_meta_tools.py  test_publish_release.py
tests/analysis/: support.py  test_analysis.py  test_builtins_and_packages.py  test_control_flow.py  test_metadata_commands.py  test_metadata_overrides.py  test_resolution.py  test_tcl_plugins.py
tests/analysis/diagnostics/: test_ambiguous_command.py  test_ambiguous_variable.py  test_contextual_command_diagnostics.py  test_duplicate_proc.py  test_invalid_regex.py  test_malformed_if.py  test_malformed_switch.py  test_missing_option_value.py  test_unknown_option.py  test_unknown_subcommand.py  test_unreachable_code.py  test_unresolved_command.py  test_unresolved_package.py  test_unresolved_variable.py  test_wrong_argument_count.py
tests/analysis/flow/: test_variables.py
tests/lsp/: helpers.py  test_conversion.py  test_document_changes.py  test_lsp.py  test_semantic_tokens.py  test_server_features.py  test_server_protocol.py  test_service_features.py  test_workspace_loading.py
tests/parser/: test_parser.py  test_tcllib_corpus.py
(+14 files in other folders)
