[project]
name = "tcl-ls"
version = "0.1.0"
description = "A typed Python Tcl language server."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
tcl-ls = "tcl_lsp.__main__:main"
tcl-check = "tcl_lsp.check:main"

[dependency-groups]
dev = [
    "basedpyright>=1.37.4",
    "pytest>=9.0.0",
    "ruff>=0.15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcl_lsp"]

[tool.hatch.build.targets.wheel.force-include]
"meta" = "tcl_lsp/meta"

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "F",
    "I",
    "RUF",
    "UP",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tcl_lsp"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
